--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
+        "php": "^7.3||^8.0",
         "phpunit/phpunit": "9"
+        
     },
     "autoload": {
         "psr-4": {
