--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "config": {
+        "platform": {
+            "php": "8.0.28" 
+        }
+    },
     "require": {
         "phpunit/phpunit": "^10"
     },
